--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@mui/x-charts": "^6.0.0-alpha.13",
     "@mui/x-date-pickers": "^6.16.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
